--- a/config/microdox_v2.conf
+++ b/config/microdox_v2.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Microdox OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Split keyboard config
+CONFIG_BT_DEVICE_NAME="CHOCOFI-L"
