feat(chocofi): add chocofi configs

--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: microdox_v2_left
+    shield: chocofi_left
   - board: nice_nano_v2
-    shield: microdox_v2_right
-  - board: nice_nano_v2
-    shield: settings_reset
+    shield: chocofi_right
