--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,5 @@ include:
     shield: chocofi_left
   - board: nice_nano_v2
     shield: chocofi_right
+  - board: nice_nano_v2
+    shield: settings_reset
